Make notes more consistent
Signed-off-by: Vasilii Generalov <vasilii.generalov@yandex.ru>

--- a/lecture1.tex
+++ b/lecture1.tex
@@ -58,9 +58,15 @@
 \begin{frame}{\secname : \subsecname}
   \framesubtitle{Сумматор}
 
-  \note{Биологический нейрон реагирует на спайки~--- импульсы,
-    приходящие на аксоны, но импульсное поведение сложно моделировать.
-    Самой удобной моделью оказался линейный сумматор. Множество $w_i$
+  \note{Поговорим про <<нейро>> в нейросетях. Из слова понятно, что
+    это сети нейронов. А что такое нейрон?~--- из них состоит наш с
+    вами мозг, такие нейроны назовем биологическими.
+    Биологический нейрон реагирует на спайки~--- импульсы,
+    приходящие на аксоны. Нейросети же содержат модели нейронов,  но
+    импульсное поведение сложно моделировать.
+    Самой удобной моделью оказался линейный сумматор. Слева на слайде
+    можно видеть выражение, описывающее модель, а справа~--- ее
+    графическую интерпретацию.    Множество $w_i$
   принято называть весами нейрона, а свободный член $b$~--- смещением.}
 
   \begin{columns}
@@ -112,12 +118,15 @@
     каждым входом, то получится линейный слой, также называемый
     полносвязным. Количество нейронов в первом слое принято называть
     шириной входа, а во втором~--- шириной выхода. Функцию линейного
-  слоя можно описать произведением матрицы весов на вектор входных параметров.}
+    слоя можно описать произведением матрицы весов на вектор входных
+    параметров. На этом слайде снова математическое описание модели
+    слева и графический аналог справа. Вспомним выражение для линейной
+    функции $a \cdot x + b$. Оно очень похоже на описание линейного
+  слоя. Попробуем воспроизвести поведение функции через слой.}
 
   \begin{columns}
 
     \begin{column}{0.5\textwidth}
-      Здесь и далее используются обозначения, принятые в PyTorch:
       $$
       y = x \cdot \mtx{A}^T + \mtx{b}
       $$
@@ -175,9 +184,10 @@
 \begin{frame}[fragile]{\secname : \subsecname}
   \framesubtitle{Описание модели}
 
-  \note{Очевидно, что использование фреймворка прячет от пользователя
-    львиную долю кода. Даже с учетом этого, простейшая модель занимает
-  3 строчки~--- конструктор и метод прямого прохода.}
+  \note{Выразим нашу идею с помощью PyTorch. Очевидно, что
+    использование фреймворка прячет от пользователя львиную долю кода.
+    Но даже с учетом этого, простейшая модель занимает 3 строчки~---
+  конструктор и метод прямого прохода.}
 
   \inputminted[firstline=19,lastline=25]{python}{linear_regression_1/linear_regression_1.py}
 \end{frame}
@@ -272,14 +282,14 @@
   \framesubtitle{Активация}
 
   \note{Ответ прост~--- нелинейность привносит активация. Для начала
-  положим, что существует функция $g$, принимающая результат работы нейрона.}
-
-  Нелинейность в модель добавляет функция активации
+    положим, что существует функция $g$, принимающая результат работы
+    нейрона. Как обычно, слева и справа математическое и графическое
+    представление. В некоторых источниках сочетание нейрон/линейный слой +
+  активация называют <<перцептрон>>.}
 
   \begin{columns}
 
     \begin{column}{0.5\textwidth}
-
       $$
       y = g\left(\sum_{i}^{} w_i \cdot x_i + b\right)
       $$
@@ -314,8 +324,6 @@
           \draw (y1) -- (y2);
         \end{tikzpicture}
       \end{center}
-      В некоторых источниках сочетание нейрон/линейный слой +
-      активация называют <<перцептрон>>
     \end{column}
 
   \end{columns}
@@ -325,7 +333,8 @@
   \framesubtitle{Описание модели}
 
   \note{Не будем откладывать и добавим функцию активации~---
-  сигмоиду~--- между линейными слоями.}
+    сигмоиду~--- между линейными слоями. В коде снова требуется всего пара
+  новых строчек.}
 
   \inputminted[firstline=19,lastline=30]{python}{linear_regression_3/linear_regression_3.py}
 \end{frame}
@@ -333,9 +342,10 @@
 \begin{frame}{\secname : \subsecname}
   \framesubtitle{Регрессия произвольной функции}
 
-  \note{Картина далека от идеала, и модель можно обучать дальше, но
-    результат принципиально лучше простой линии, что видно по выходящим
-  на плато графикам потерь.}
+  \note{Вернемся к регрессии синуса. Картина слева далека от идеала,
+    и модель можно обучать дальше, но
+    результат уже принципиально лучше простой линии, что видно по выходящим
+  на плато графикам потерь справа.}
 
   \begin{columns}
     \begin{column}{0.5\textwidth}
@@ -373,8 +383,9 @@
 
   \note{Рассмотрим активации ближе. На слайде показаны две самые
     популярные из них~--- сигмоида и rectified linear unit. Первую
-    применяют для бинарной классификации, ее значение лежит в пределах
-    от 0 до 1, а это готовая вероятность. ReLU можно часто встретить в
+    применяют для предсказания вероятности одного из двух исходов,
+    потому что ее значение лежит в пределах
+    от 0 до 1. ReLU же можно часто встретить в
   сверточных сетях.}
 
   \begin{columns}
@@ -406,11 +417,11 @@
 \begin{frame}{\secname : \subsecname}
   \framesubtitle{$\tanh$, GELU}
 
-  \note{Еще один вариант~--- гиперболический тангенс, он был применен
-    в одной из первых сверточных сетей. Последняя функция~--- GELU,
+  \note{Еще один вариант~--- гиперболический тангенс, его применяли
+    в первых сверточных сетях. Последняя функция~--- GELU,
     она учитывает не
     только значения входа, но и статистику через $\Phi(x)$~---
-    кумулятивную функцию распределения. Значение $\Phi(x)$ равняется
+    функцию распределения. Значение $\Phi(x)$ равняется
     вероятности, с которой случайная величина из нормального
   распределения меньше либо равна $x$.}
 
@@ -575,12 +586,15 @@
   \note{Вспомним определение градиента. Это вектор, указывающий
     направление наискорейшего роста функции. Логично, что для
     уменьшения значения следует двигаться в
-    противоположную сторону. Однако, есть шанс <<перескочить>>
-    минимум, и чтобы этого не происходило, вводится параметр $\eta$~---
-    скорость обучения, как правило, он достаточно мал. Градиентный
+    противоположную сторону. Тогда обновление обучаемого параметра
+    $\mtx{W}$ рассчитывается как разница текущего  значения и частная
+    производная функции ошибки по этому параметру с некоторым
+    коэффициентом. Однако, есть шанс <<перескочить>>
+    минимум, и чтобы этого не происходило, вводится коэффициент $\eta$~---
+    скорость обучения, как правило, он достаточно мал. Важно
+    понимать, что градиентный
     поиск может найти как глобальный, так и локальный минимум, и для
-    улучшения результатов известны
-  более эффективные модификации.}
+  лучших результатов известны более эффективные модификации.}
 
   Для задачи минимизации:
   $$
@@ -596,6 +610,12 @@
 
 \begin{frame}{\secname : \subsecname}
   \framesubtitle{SGD и модификации}
+
+  \note{Гессиан~--- матрица частных производных по всем парам
+    параметров. Нетрудно посчитать, что уже для 100 тысяч переменных, а
+    для современных сетей это ничтожно мало, гессиан будет содержать 10
+    миллиардов параметров, и вычислять его в тысячах эпох обучения
+  быстро привод к взрыву вычислений.}
 
   Описанный выше метод~--- это Stochastic Gradient Descent.
   Существуют улучшения данного подхода:
